# cgol

./: Cargo.toml  README.md
maps/: blinker.txt  block.txt  four.txt  glider.txt  lwss.txt  toad.txt
src/: main.rs  parser.rs  ui.rs  world.rs
