[package]
name = "cgol"
version = "0.1.0"
authors = ["Petr Novotnik <pnovotnik@googlemail.com>"]
description = "Conway's game of life for the terminal"

[dependencies]
log = "*"
env_logger = "*"

[dependencies.bit-vec]
#version = "*"
#git = "https://github.com/contain-rs/bit-vec.git"
path = "../bit-vec"
